changed laptop image, fixed overflow-x in homepage

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,11 @@ body {
 html,
 body {
   max-width: 100%;
+  overflow-x: hidden;
+}
+
+main {
+  overflow-x: hidden;
 }
 
 /* Performance optimization for animations */
